# hand_history_parser

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
app/: main.py
app/api/: main.py
app/api/dtos/: calculate_equity_request.py  calculate_equity_response.py  generate_stats_response.py  hand_history_response.py
app/api/routes/: auth.py  calculate_equity.py  generate_stats_from_file.py  hands.py  upload_history.py
app/auth/application/: authenticator.py  login.py
app/domain/: game_type.py  languages.py  poker_rooms.py
app/equity_calculator/: hand_vs_range_calculator.py
app/hand/application/: game_state_handler.py  generate_stats_after_hands_saved.py  guest_hands_remover.py  stats_generator.py
app/hand/domain/: hand.py  hand_repository.py  stats.py  stats_repository.py
app/history_parser/: history_parser.py
app/history_parser/poker_stars/: poker_stars_en_parser.py  poker_stars_parser_factory.py  poker_stars_sp_parser.py
app/shared/config/: app_config.py
app/shared/domain/: __init__.py  base_exception.py  criteria.py  error_code.py
app/stats_generator/: game_state_handler.py  stats_generator.py
app/user/domain/: user.py  (+2 more)
hands_storage/: 01a01v02-ed1f-11ef-901b-0ade7a4f7cd3.json  75565b68-ed1f-11ef-901b-0ade7a4f7cd3.json
stats_storage/: 75565b68-ed1f-11ef-901b-0ade7a4f7cd3.json
tests/e2e/: calculate_equity_test.py  get_hand_test.py  get_hands_test.py  upload_history_test.py
tests/history_parser/: history_parser_test.py
tests/mocks/: hand_mock.py
tests/stats_generator/: action_handler_factory_test.py  stats_generator_test.py
(+70 files in other folders)
