[project]
name = "app"
version = "0.1.0"
description = "Api to parse poker hands history into a json formant with all the neccesary information on it"
authors = [
    {name = "Leopoldo",email = "nicoromerom87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
treys = "^0.1.8"
